--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pyrogram==2.0.80
+pyrofork
 tgcrypto
-Flask==2.1.1
-gunicorn==20.1.0
-Jinja2==3.0.3
-werkzeug==2.0.2
-itsdangerous==2.0.1
+Flask
+gunicorn
+Jinja2
+werkzeug
+itsdangerous
