--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
-#https://codeload.github.com/TelegramPlayground/pyrogram/zip/refs/heads/dev
+#https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
+pyrotgfork
 tgcrypto
 Flask
 gunicorn
